@@ -1,3 +1,4 @@
+Added terminal lone pairs
 A few other bond length fixes
 "Model" bond lengths on 2nd tab correspond to the "Real" bond lengths
 Fixed a few obscure bugs
